# rprotobuf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: buffer.rs  error.rs  handler.rs  lib.rs  parser.rs  wire.rs  writer.rs
tests/: parser_tests.rs  writer_tests.rs
