[package]
name = "rprotobuf"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Push-based Protocol Buffers parser and writer (gumdrop/jsonparser-style)"
readme = "README.md"
license = "LGPL-2.1-or-later"
repository = "https://github.com/cpkb-bluezoo/rprotobuf"
keywords = ["protobuf", "parser", "streaming", "serialization"]
categories = ["encoding", "parser-implementations"]

[lib]
name = "rprotobuf"
path = "src/lib.rs"

[dev-dependencies]
